trunk/Archive2/92/959af490d875ea/output
main.cpp:1:14: error: empty character constant
 int main() { ''; }
              ^
